--- a/AirLift/nbproject/project.properties
+++ b/AirLift/nbproject/project.properties
@@ -73,7 +73,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=AirLift
-main.class=airlift.AirLift
+main.class=main.AirLift
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
